[tool.poetry]
name = "hannah-tvm"
version = "0.1.0"
description = ""
authors = ["Christoph Gerum <christoph.gerum@uni-tuebingen.de>"]
license = "Apache-2.0"
readme = "README.md"



packages = [
    { include = "hannah_tvm", from = "." },
    { include = "tvm", from = "external/tvm/python" }
]


[tool.poetry.dependencies]
python = ">3.9 <3.12"
hydra-core = "^1.1.0"
Twisted = "^21.2.0"
prettytable = ">=2.1.0"
SQLAlchemy = ">=1.4.12"
configparser = ">=5.0.2"
pyvcd = ">=0.2.4"
pyelftools = ">=0.27"
openpyxl = ">=3.0.7"
XlsxWriter = ">=1.4.0"
PyYAML = ">=5.4.1"
numpy = ">=1.20.2"
colorama = ">=0.4.4"
decorator = ">=5.1.0"
tqdm = ">=4.62.3"
networkx = ">=2.6.3"
matplotlib = ">=3.4.3"
graphviz = ">=0.19.1"

xgboost = "1.5.2"
tabulate = ">=0.8.9"
fsspec = {version = "^2022.8.2", extras=["git", "http"]}
appdirs = "^1.4.4"
typing-extensions = "^4.4.0"
torch = "^2.0.0"

# Tensorflow dependencies

# ONNX dependencies
onnxoptimizer = "^0.3.13"
onnx = "^1.16.2"

# Automate dependencies
board-automate = {version = "^0.4.0", optional = true, extras = ["postgres"]}

# micro dependencies
PTable = {version=">=0.9.2", optional=true}
pyserial = {version=">=3.5", optional=true}
west =  {version=">=0.13.1", optional=true}
pyusb = {version = "^1.2.1", optional = true}

# dashboard dependencies
dash = {version="^2.3.1", optional=true}
ipykernel = {version = "^6.21.2", optional = true}
jupyter = {version = "^1.0.0", optional = true}
nbconvert = {version = "^7.2.9", optional = true}
psutil = "^5.9.5"
tornado = "^6.3.2"
importlib-metadata = "^6.8.0"
tensorrt = {version = "^10.2.0.post1", optional = true}
tensorflow = {version = "^2.17.0", optional = true}
tflite = {version = "^2.10.0", optional = true}
cuda-python = {version = "^12.5.0", optional = true}
pandas = "^2.2.2"

[tool.poetry.scripts]
hannah-tvm-compile = 'hannah_tvm.compile:main'
hannah-tvm-tune = 'hannah_tvm.tune:main'
hannah-tvm-memory = 'hannah_tvm.analysis:memory_main'
hannah-tvm-dashboard = 'hannah_tvm.dashboard.app:main'

[tool.poetry.extras]
automate = ["board-automate"]
micro = ["pyserial",  "PTable", "west", "pyusb"]
dash = ["dash"]
onnx = ["onnx", "onnxoptimizer"]
tensorflow = ["tensorflow", "tflite"]
notebook = ["ipykernel", "jupyter", "nbconvert"]
tensorrt = ["tensorrt", "cuda-python"]



[tool.poetry.group.dev.dependencies]
pre-commit = ">=3.0.4"
black = ">=22.3.0"
pytest = ">=6.2.5"
isort = ">=5.10.1"
coverage = ">=6.3.2"
pyment = ">=0.3.3"

[tool.poetry.build]
script = "build.py"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"




